samples/_failures_safe/1761302819_21124c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6362354d.c: In function ‘main’:
./samples/SAFE/__tmp_6362354d.c:154:9: error: expected expression at end of input
  154 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_6362354d.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6362354d.c:154:9: error: expected declaration or statement at end of input
